feat: Created a build

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ap-gov-pg-redirector",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
@@ -9,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.6.3"
   }
 }
